<resources>
    <string name="app_name">Xshare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="btn_send">SEND FILE</string>
    <string name="str_unit_mb">MB</string>
    <string name="str_unit_sec">SEC</string>
    <string name="str_unit_send">SEND</string>
    <string name="str_unit_lift">LIFT</string>
    <string name="str_dialog_msg">Whether to leave the group?</string>
    <string name="share_toast">Permission denied, can not receive file</string>

</resources>
