<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ccaong.xshare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ccaong.xshare.ui.group.join.JoinGroupFragment"
        android:label="@string/menu_slideshow"/>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ccaong.xshare.ui.group.create.CreateGroupFragment"
        android:label="@string/menu_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ccaong.xshare.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ccaong.xshare.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>